added axios function to access openAI API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "davinci",
+        "Flintstone",
         "Supabase"
     ],
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
 }
