--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
     "cSpell.words": [
-        "davinci",
-        "Flintstone",
         "Supabase"
     ],
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
 }
