added axios function to acces openAI api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
+        "davinci",
         "Supabase"
     ],
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
 }
