--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/garayot/Frontend#readme",
   "devDependencies": {
     "electron": "^24.2.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "toastify-js": "^1.12.0"
   }
 }
